package com.akash.design.lld.designpatterns.observer;

public interface NotificationAlertObserver {
    public void update();
}
